# woodeye

./: README.md  package.json
.github/workflows/: release.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  git.rs  lib.rs  types.rs
src/lib/: store.ts  types.ts
src/lib/components/: CommitDiffView.svelte  CommitList.svelte  ContentToolbar.svelte  CreateWorktreeDialog.svelte  WorktreeDropdown.svelte  WorktreeSelector.svelte
