[package]
name = "woodeye"
version = "0.2.0"
description = "Git Worktree Status Viewer"
authors = ["you"]
edition = "2021"

[lib]
name = "woodeye_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "woodeye"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
notify-debouncer-mini = "0.4"
rayon = "1.10"
